--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
 		"angular-mocks": "~1.2",
 		"angular-bootstrap": "~0.10.0",
 		"angular-ui-utils": "~0.1.0",
-		"angular-ui-router": "~0.2.9" 
+		"angular-ui-router": "~0.2.9",
+        "angular-underscore-module": "latest"
 	}
 }
